Fix: make overflow hidden and remove old files

--- a/public/styles/composition/index.css
+++ b/public/styles/composition/index.css
@@ -11,7 +11,7 @@ body {
     height: 100%;
     width: 100%;
     background-color: skyblue;
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 
 .team-container {
